# simpleFileManagerCLI

./: CMakeLists.txt  readme.md
src/: main.cpp
src/application/: FileSystemService.hpp  IFileSystemService.hpp
src/domain/: DirectoryStats.hpp  FileSystemEntity.hpp
src/presentation/: CommandFactory.hpp  ICommand.hpp
src/presentation/commands/: CdCommand.hpp  ExitCommand.hpp  LsCommand.hpp  PwdCommand.hpp  StatCommand.hpp  VisualCommand.hpp
